#Akregator ChangeLog
===================
(c) 2004-2006 the Akregator authors.

Changes after 1.2.5:
-----------------------------

Bug fixes:

 2006/10/31 Fix group name encoding bug when adding feeds from commandline (e.g., using the Konq plugin) (#136559)
            Patch by Andrey Cherepanov.

Changes after 1.2.4:
-----------------------------

Bug fixes:

 2006/09/18 Set default font sizes, prevents use of font size 1 in article viewer on first startup -fo
 2006/08/28 Do not create multiple items in the feed lists when dragging feeds to a folder
            that was moved before (#124303) -fo
 2006/08/26 Fix a possible crash in the internal browser when going forward -fo
 2006/08/26 show error messages while browsing as HTML, not as annoying popups (#107740) -fo
 2006/08/25 Show title of selected feed in window caption (#111471) -fo
 2006/08/25 Konqueror plugins: correctly enable/disable icon when enabling/disabling the plugin (#132823) -fo
 2006/08/21 Don't crash on very long URLs (>255 chars) used for feed logos (#130849) -fo
 2006/08/20 Konqueror plugins: Fix crash when using the Akregator plugin in file manager mode (#124891) -fo
 2006/08/20 Feed detection: Fix detection when relative URLs are used in the link tags (#132687) -fo
 2006/08/17 Speak selected text in internal browser when using the "Speak Text" button (#132505) -fo

Changes after 1.2.3:
-----------------------------

Bug fixes:

 2006/07/07 Remove tray icon when disabling Akregator part in Kontact (#130127) -fo
 2006/07/07 Fix a crash on shutdown occurring in ProgressManager (#130377) -fo
 2006/06/25 Fix context menus in browser tab, show appriopriate entries when
            text is selected (copy action) or the cursor is over a link 
            (#121957) -fo
 
Changes after 1.2.2:
-----------------------------

New features:

 2006/05/01 add author information to article header (in the article pane only) -fo

Bug fixes:
